<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:background="@drawable/buttonshapebkg80"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/logout_question"
        android:textColor="@color/colorMondo1"
        android:textSize="15sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorMondo4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/buttonshape"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="@color/colorMondo1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/buttonshape"
            android:clickable="true"
            android:text="@string/no"
            android:textColor="@color/colorMondo1"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>