<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/worldmap">

<!--    <RelativeLayout
        android:id="@+id/VBestInSecondsFooter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />-->
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/VBestInSecondsFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adUnitIdBanner"
        />

    <RelativeLayout
        android:id="@+id/VMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait"
        tools:context=".MainActivity"
        android:layout_above="@+id/VBestInSecondsFooter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:touchscreenBlocksFocus="false">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textSize="45dp"
            android:textColor="#ff0000" />
        <Button
            android:id="@+id/btBest60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btTopMargin"
            android:text="@string/btTextT60"
            android:nestedScrollingEnabled="false"
            android:background="@drawable/buttonshape"
            android:textSize="@dimen/btTextSize"
            android:textColor="@color/colorMondo1"
            android:textStyle="bold"
            android:layout_below="@+id/tvTitle"

            
            android:layout_marginLeft="@dimen/btLeftMargin"
            android:layout_marginRight="@dimen/btRightMargin"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btBest120"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btTextT120"
            android:nestedScrollingEnabled="false"
            android:background="@drawable/buttonshape"
            android:textSize="@dimen/btTextSize"
            android:textColor="@color/colorMondo1"
            android:textStyle="bold"
            android:layout_below="@+id/btBest60"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/btBest60"
            android:layout_alignRight="@+id/btBest60"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btBest180"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btTextT180"
            android:nestedScrollingEnabled="false"
            android:background="@drawable/buttonshape"
            android:textSize="@dimen/btTextSize"
            android:textColor="@color/colorMondo1"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btBest120"
            android:layout_alignRight="@+id/btBest60"
            android:layout_alignLeft="@+id/btBest60"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btCustomPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btBest180"
            android:layout_alignLeft="@+id/btBest60"
            android:layout_alignRight="@+id/btBest60"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/buttonshape"
            android:nestedScrollingEnabled="false"
            android:text="@string/btTextCustomPlay"
            android:textColor="@color/colorMondo1"
            android:textSize="@dimen/btTextSize"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>