<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/worldmap"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/VMainFooter"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitIdBanner"
            />

    <RelativeLayout
        android:id="@+id/VMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/VMainFooter"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:screenOrientation="portrait"
        android:touchscreenBlocksFocus="false"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btBestTime"
            android:layout_alignStart="@+id/btBestScore"
            android:layout_alignEnd="@+id/btBestScore"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/buttonshape"
            android:nestedScrollingEnabled="false"
            android:text="@string/settings"
            android:textColor="@color/colorMondo1"
            android:textSize="@dimen/btTextSize"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff0000"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btBestScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginStart="@dimen/btLeftMargin"
            android:layout_marginTop="@dimen/btTopMargin"
            android:layout_marginEnd="@dimen/btRightMargin"
            android:background="@drawable/buttonshape"
            android:nestedScrollingEnabled="false"
            android:text="@string/best_score_in_time"
            android:textColor="@color/colorMondo1"
            android:textSize="@dimen/btTextSize"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btBestTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btBestScore"
            android:layout_alignStart="@+id/btBestScore"
            android:layout_alignEnd="@+id/btBestScore"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:nestedScrollingEnabled="false"
            android:text="@string/best_time_to_score"
            android:textColor="@color/colorMondo1"
            android:textSize="@dimen/btTextSize"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btBestTime"
            android:layout_alignStart="@+id/btBestScore"
            android:layout_alignEnd="@+id/btBestScore"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/buttonshape"
            android:nestedScrollingEnabled="false"
            android:text="@string/about"
            android:textColor="@color/colorMondo1"
            android:textSize="@dimen/btTextSize"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/lbUserProvider"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorMondo1" />

        <TextView
            android:id="@+id/lbUserNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorMondo1" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:visibility="invisible" />


    </RelativeLayout>
</RelativeLayout>
